[package]
name = "console-utilities"
version = "0.1.7"
edition = "2021"
authors = ["suffix"]
description = "A Rust crate for handling console input and output utilities."
license = "MIT"
repository = "https://github.com/suffixsec/ConsoleUtils-rs"
homepage = "https://github.com/suffixsec/ConsoleUtils-rs"

[dependencies]
